Minor syntax; Add release note