@@ -7,7 +7,6 @@ import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -124,9 +123,9 @@ class SdkGroceryStoreServiceTest
                 .applyAction(
                     Customer
                         .filterPurchaseHistory(
-                            Collections.singleton(Receipt.builder().customerId(1337).id(4242).build()),
-                            Arrays.asList("milk", "eggs"),
-                            Arrays.asList(ProductCategory.DAIRY, ProductCategory.MEAT),
+                            List.of(Receipt.builder().customerId(1337).id(4242).build()),
+                            List.of("milk", "eggs"),
+                            List.of(ProductCategory.DAIRY, ProductCategory.MEAT),
                             dateRange))
                 .execute(destination);
 
